Improve automatic reconciliation

It took way too long for the number of combinations to calculate. The
total of combinations checked has been reduced from 300.000 to 60.000
before the search is terminated. Also, the progress bar has been fixed
so that there is some visual feedback to the user during the
calculations.

BUG: 405329
FIXED-IN: 5.0.4